--- a/index.html
+++ b/index.html
@@ -1,58 +1,1 @@
-<!DOCTYPE html>
-<html lang="ru">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
-    <title>Title Pages</title>
-    <link rel="stylesheet" href="css/base-styles.css" type="text/css">
-</head>
-
-<body>
-    <p>../pug/templates/template</p>
-    <div>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p>321</p>
-        <div>578</div>
-        <div>768</div>
-        <div>992</div>
-        <div>1440</div>
-        <div>1940</div>
-    </div>
-    <header class="header">
-        <div class="wrapper">
-            <div class="parent">
-                <div class="child">Header<div class="icon icon-png"></div>
-                    <div class="icon icon-webp"></div>
-                    <div class="svg-mouse svg-mouse-box"></div>
-                </div>
-                <div class="child">Header2</div><img src="assets/icons/svg/spriteSVG.svg#mouse" alt=""><button>
-                    as</button>
-            </div>
-        </div>
-    </header>
-    <main class="page">
-        <section class="banner">
-            <div class="wrapper">
-                <h1 class="page__title-h1">Title h1</h1>
-                <p class="page__text">Any textp</p><a class="page__text" href="page/page.html">page </a>
-            </div>
-        </section>
-    </main>
-    <link rel="stylesheet" href="css/viewport/mobileFirst-321px.css" type="text/css">
-    <link rel="stylesheet" href="css/styles-sprites.css" type="text/css">
-    <link rel="stylesheet" type="text/css" media="screen and (min-width:578px)" href="css/viewport/media/578/578px.css">
-    <link rel="stylesheet" type="text/css" media="screen and (min-width:768px)" href="css/viewport/media/768/768px.css">
-    <link rel="stylesheet" type="text/css" media="screen and (min-width:992px)" href="css/viewport/media/992/992px.css">
-    <link rel="stylesheet" type="text/css" media="screen and (min-width:1440px)"
-        href="css/viewport/media/1440/1440px.css">
-    <link rel="stylesheet" type="text/css" media="screen and (min-width:1940px)"
-        href="css/viewport/media/1940/1940px.css">
-    <script src="libs/js/_all/debug-grid-create.js"></script>
-    <script src="js/main.js"></script>
-</body>
-
-</html>
+<!DOCTYPE html><html lang="ru"> <head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="icon" type="image/x-icon" href="assets/img/favicon.ico"><title>Title Pages</title><link rel="stylesheet" href="css/base-styles.css" type="text/css"></head><body><div class="someDiv"><p>../pug/templates/template</p></div><div> <p>Our Awesome Website</p><p>Hello Worlssd!</p><p>Hello Worlssd!</p><p>321</p><div>578</div><div>768</div><div>992</div><div>1440</div><div>1940</div></div><button class="debugGrid-btn debugGrid-btn__create" onclick="debugGridCreate()"></button><button class="debugGrid-btn debugGrid-btn__remove debugGrid-btn__hidden" onclick="debugGridRemove()"></button><div class="debugGrid debugGrid__z-index-negative"></div><header class="header"><div class="wrapper"><div class="parent"><div class="child">Header<div class="icon icon-png"></div><div class="icon icon-webp"></div><div class="svg-mouse svg-mouse-box"></div></div><div class="child">Header2</div><img src="assets/icons/svg/spriteSVG.svg#mouse" alt=""><button> as</button></div></div></header><main class="page"><section class="banner"><div class="wrapper"><h1 class="page__title-h1">Title h1 Index</h1><p class="page__text">Any textp</p><a class="page__text" href="page/page.html">page     </a></div></section></main><link rel="stylesheet" href="css/viewport/mobileFirst-321px.css" type="text/css"><link rel="stylesheet" href="css/styles-sprites.css" type="text/css"><link rel="stylesheet" type="text/css" media="screen and (min-width:578px)" href="css/viewport/media/578/578px.css"><link rel="stylesheet" type="text/css" media="screen and (min-width:768px)" href="css/viewport/media/768/768px.css"><link rel="stylesheet" type="text/css" media="screen and (min-width:992px)" href="css/viewport/media/992/992px.css"><link rel="stylesheet" type="text/css" media="screen and (min-width:1440px)" href="css/viewport/media/1440/1440px.css"><link rel="stylesheet" type="text/css" media="screen and (min-width:1940px)" href="css/viewport/media/1940/1940px.css"><script src="libs/js/_all/debug-grid-create.js"></script><script src="js/main.js"></script></body></html>
